new function added support for time limitation.